--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.3",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.7.5",
     "globby": "^11.0.0",
     "isomorphic-unfetch": "^3.0.0",
+    "material-design-icons": "^3.0.1",
     "next": "9.5.3",
     "next-compose-plugins": "^2.2.0",
+    "next-images": "^1.8.1",
     "next-optimized-images": "^2.5.4",
     "prettier": "^2.1.2",
     "rc-drawer": "^4.1.0",
@@ -21,7 +24,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "16.13.0",
     "react-ga": "^3.1.2",
-    "react-icons": "^3.10.0",
+    "react-icons": "^3.11.0",
     "react-modal-video": "^1.2.6",
     "react-multi-carousel": "^2.5.5",
     "react-scroll": "^1.8.0",
