--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "svg": "svgr -d src/assets/feature src/assets/feature "
   },
   "dependencies": {
     "@heroicons/react": "^1.0.3",
+    "@svgr/cli": "^5.5.0",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.7.5",
     "globby": "^11.0.0",
@@ -29,6 +31,7 @@
     "react-multi-carousel": "^2.5.5",
     "react-scroll": "^1.8.0",
     "react-stickynode": "^3.0.3",
+    "svgs": "^4.1.1",
     "theme-ui": "^0.3.1",
     "typeface-dm-sans": "^1.1.3"
   },
